Fix issues on smaller screens, Close WS after each analysis.

--- a/sveltekit-app/src/routes/styles.css
+++ b/sveltekit-app/src/routes/styles.css
@@ -80,7 +80,7 @@ pre {
 
 input,
 button {
-	font-size: inherit;
+	font-size: large;
 	font-family: inherit;
 }
 
